[package]
name = "fanfare"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
chrono = { version = "0.4.10", default-features = false, features = ["std"] }
glob = "0.3.0"
main_error = "0.1.0"
smallvec = "1.1.0"
structopt = { version = "0.3.5", default-features = false }

[dependencies.heed]
git = "https://github.com/Kerollmops/heed.git"
branch = "dup-data"
default-features = false
